# Context-Aware-Robotic-Manipulation-using-LLMs-and-VLMs

./: panda.sh
action_tutorials_interfaces/: CMakeLists.txt  package.xml
action_tutorials_interfaces/action/: Fibonacci.action
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moveit_common/share/moveit_common/: package.sh
install/moveit_common/share/moveit_common/cmake/: moveit_commonConfig-version.cmake  moveit_commonConfig.cmake
install/moveit_resources_panda_description/share/moveit_resources_panda_description/: local_setup.sh
install/moveit_resources_pr2_description/share/ament_index/resource_index/parent_prefix_path/: moveit_resources_pr2_description
install/moveit_resources_pr2_description/share/moveit_resources_pr2_description/: local_setup.sh
install/moveit_task_constructor_msgs/share/moveit_task_constructor_msgs/: package.bash  package.zsh
log/: latest_build
moveit2_tutorials/: CMakeLists.txt
moveit2_tutorials/doc/examples/pilz_industrial_motion_planner/src/: pilz_mtc.cpp
moveit_resources/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
moveit_resources/install/moveit_resources_panda_description/share/moveit_resources_panda_description/: local_setup.sh  package.sh
moveit_resources/install/moveit_resources_panda_description/share/moveit_resources_panda_description/urdf/: panda.urdf.xacro
moveit_resources/log/: latest_build
moveit_resources/panda_description/urdf/: gazebo.world  panda.urdf  panda.urdf.xacro
moveit_resources/panda_moveit_config/config/: panda.srdf  panda.urdf.xacro  panda_arm_hand.srdf.xacro  ros2_controllers_gazebo.yaml
moveit_visual_tools/: CHANGELOG.rst
mtc_tutorial/: CMakeLists.txt  package.xml
mtc_tutorial/include/mtc_tutorial/: visibility_control.h
mtc_tutorial/install/: local_setup.sh  setup.sh
mtc_tutorial/install/mtc_tutorial/share/mtc_tutorial/: package.dsv  package.ps1  package.sh
mtc_tutorial/launch/: mtc_demo.launch.py  pick_place_demo.launch.py
mtc_tutorial/log/: latest_build
mtc_tutorial/src/: constraint_checker_pub.py  constraint_checker_service.py  mtc_action_client.cpp  mtc_action_server.cpp  mtc_chuppa.cpp  mtc_tutorial.cpp  task_planner_service.py  udp_joint_pos_sender.cpp
plan_dispatcher/: package.xml  setup.cfg  setup.py
task_planner_interfaces/: CMakeLists.txt  package.xml
task_planner_interfaces/srv/: ConstraintCheck.srv  PlanningAction.srv
